infra/k8s/21-device-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: device-service
  namespace: telemetry
  labels:
    app: device-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: device-service
  template:
    metadata:
      labels:
        app: device-service
    spec:
      serviceAccountName: device-service
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: device-service
          image: telemetry/device-service:latest
          imagePullPolicy: Never
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "100m"
              memory: "32Mi"
            limits:
              cpu: "250m"
              memory: "64Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 10
