infra/k8s/22-alert-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert-service
  namespace: telemetry
  labels:
    app: alert-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alert-service
  template:
    metadata:
      labels:
        app: alert-service
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
      containers:
        - name: alert-service
          image: telemetry/alert-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "50m"
              memory: "32Mi"
            limits:
              cpu: "150m"
              memory: "64Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 10
